--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,16 +6,15 @@
   --background: #ffffff;
   --foreground: #171717;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+*{
+  box-sizing: border-box;
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+body{
+  direction: rtl;
+  text-align: right;
+  background-color: #B0BEC5;
+}
+.content{
+  margin-top: 40px;
 }
